fix(emotes state controller): ready button was not visible

--- a/src/scss/states/emotes.scss
+++ b/src/scss/states/emotes.scss
@@ -2,6 +2,7 @@
 	#button--ready {
 		display: flex;
 		opacity: 0;
+		position: absolute;
 		pointer-events: none;
 		width: 55vh;
 		height: 16vh;
@@ -15,8 +16,9 @@
 	}
 
 	.button--visible {
-		opacity: 1;
-		pointer-events: all;
+		position: relative !important;
+		opacity: 1 !important;
+		pointer-events: all !important;
 	}
 }
 
